# multi-agent-translator

./: .gitignore  README.md  gen_pdf_v2.py  pyproject.toml  rerun_v2_pipeline.py  run_translation.py  shared_knowledge_base.md
config/: default.yaml  models.yaml
docs/: ARCHITECTURE.md  SETUP.md  article_literary_translation_agent.docx  article_literary_translation_agent.md
skills/: academic_translation.skill.json  academic_translation_knowledge.md  legal_translation.skill.json  legal_translation_knowledge.md  literary-translation.skill.md  translate-translator.skill.md  translation-proofreader.skill.md
src/: __init__.py
src/agents/: base.py  book_analyzer.py  chapter_translator.py  chief_editor.py  content_scout.py  fact_checker.py  rewriter.py  term_stylist.py
src/assets/: schema.py  term_enforcer.py
src/models/: registry.py
src/models/prompts/: book_analyzer.md  chapter_translator.md
src/pipeline/: orchestrator.py
src/utils/: legal_verifier.py  post_processor.py  text_splitter.py  version_tracker.py
