[project]
name = "translation-pipeline"
version = "0.1.0"
description = "多智能体翻译流水线 — 基于Hermes框架的出版级翻译质控系统"
requires-python = ">=3.11"
dependencies = [
    "agent-core>=0.1.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
